@@ -67,6 +67,21 @@ test_that("Private function: identifyDatesFormats ",
             expect_equal(identifyDatesFormats(format(Sys.Date(), "%Y-%m-%d"), formats = c("%m-%d-%Y", "%Y-%m-%d")), "%Y-%m-%d")
           })
 
+# Future test for auto change LC_TIME		  
+# Sys.setlocale("LC_TIME", "French_France.1252")
+# test_that("Private function: identifyDatesFormats control auto changing time lc",
+          # {
+            # expect_equal(identifyDatesFormats("2018-May-05", formats = c("%Y-%b-%d")), "%Y-%b-%d")
+          # })
+# Sys.setlocale("LC_TIME", "C")
+		  
+		  
+		  
+		  
+test_that("Private function: identifyDatesFormats control Accepting time zone",
+          {
+            expect_equal(identifyDatesFormats("Tue, 26 Jun 2018 17:58:10 +0200", formats = c("%a, %d %b %Y %H:%M:%S %z")), "%a, %d %b %Y %H:%M:%S %z")
+          })
 ## identifyTimeStampsFormats 
 # --------------------------
 test_that("private function: identifyTimeStampsFormats ",
